--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.19.5",
     "react-paginate": "^7.1.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
