--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@stripe/react-stripe-js": "^1.6.0",
+    "@stripe/stripe-js": "^1.21.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,6 +26,7 @@
     "react-paginate": "^7.1.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "stripe": "^8.189.0",
     "swiper": "^6.8.4",
     "web-vitals": "^1.0.1"
   },
