--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.19.5",
     "react-paginate": "^7.1.5",
     "react-router-dom": "^5.3.0",
